<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD">
    <ImageView
        android:src="@drawable/login_icon"
        android:contentDescription="@string/dashboard_image_desc"
        android:layout_width="300dp"
        android:layout_height="128dp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:text="@string/welcome_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#1A237E"
    android:layout_marginBottom="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    <TextView
        android:text="@string/login_title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>



    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/or_text"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGmail"
        android:text="@string/btn_gmail"
        android:backgroundTint="#DB4437"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
