<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <TextView
        android:text="@string/choose_language"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="#000000"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnEnglish"
        android:text="@string/lang_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/btnSpanish"
        android:text="@string/lang_spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/btnFrench"
        android:text="@string/lang_french"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/btnGerman"
        android:text="@string/lang_german"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:elevation="4dp"
        android:background="@drawable/rounded_button"/>
</LinearLayout>
